# MyTeams

./: .gitignore  pyproject.toml
app/: parser.py
app/config/: settings.py  storage.py  urls.py
app/members/: admin.py  urls.py
app/members/migrations/: 0001_initial.py
app/pages/: admin.py  managers.py  models.py  urls.py  utils.py  views.py
app/pages/migrations/: 0001_initial.py  0002_auto_20200310_1436.py
app/static/css/: base.css
app/templates/: _base.html  home.html
app/templates/account/: email_confirm.html  login.html  logout.html  signup.html
app/templates/account/email/: email_confirmation_message.txt
app/templates/pages/: calendar.html  email.html  team_list.html
